# Energiemanager

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  install.sh  uninstall.sh
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1b101599d8d8_initial_config_tables.py  edb7aeaf7649_add_trend_definitions_table.py
backend/app/: config.py  main.py
backend/app/api/: crud.py  router.py  websocket.py
backend/app/connectors/: base.py  modbus_connector.py  mqtt_connector.py  wallbox_connector.py
backend/app/core/: auth.py  database.py  events.py  logging.py
backend/app/drivers/: __init__.py  lambda_hp.py
backend/app/forecasting/: base.py  load_forecast.py  pv_forecast.py  thermal_forecast.py  weather.py
backend/app/ml/: anomaly.py  features.py  model_store.py  trainer.py
backend/app/models/: __init__.py  alarm.py  charging.py  config.py  forecast.py  generator.py  measurement.py  ml_status.py  storage.py  thermal_params.py  user.py  weather.py
backend/app/schemas/: charging.py  forecast.py  generator.py  storage.py
backend/app/services/: alarm_manager.py  charging_manager.py  controller.py  data_acquisition.py  device_manager.py  generation_manager.py  lambda_bridge.py  load_forecast.py  optimizer.py  scheduler.py  (+7 more)
backend/scripts/: seed_charging.py  seed_self_learning.py
backend/tests/: conftest.py  test_api.py  test_charging.py  test_forecasting.py  test_generation.py  test_optimizer.py  test_presets.py  test_readiness.py  test_self_learning.py  test_storage.py  test_thermal_model.py
(+169 files in other folders)
